<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/homeTitle_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tvlayout_marginleft">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tvicon_margin"
            android:contentDescription="@null"
            android:scaleType="matrix"
            android:src="@drawable/icon_homebtn_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tvtext_margintop"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/homeTitle_bar">

        <com.gotech.tv.launcher.view.MainLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frame_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/tv_marginleft"
                android:layout_marginTop="@dimen/tv_margintop"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/tv"
                    android:src="@drawable/icon_tv"/>

                <TextView
                    android:id="@+id/textview_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_tv_margintop"
                    android:text="@string/tv"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_edu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/frame_tv"
                android:layout_marginLeft="@dimen/edu_marginleft"
                android:layout_toRightOf="@+id/frame_tv"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_edu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/edu"
                    android:src="@drawable/icon_edu"/>

                <TextView
                    android:id="@+id/textview_edu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_margintop"
                    android:text="@string/edu"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/frame_edu"
                android:layout_marginLeft="@dimen/movie_marginleft"
                android:layout_toRightOf="@+id/frame_edu"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/movie"
                    android:src="@drawable/icon_movie"/>

                <TextView
                    android:id="@+id/textview_movie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_margintop"
                    android:text="@string/movie"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/frame_movie"
                android:layout_marginLeft="@dimen/update_marginleft"
                android:layout_toRightOf="@+id/frame_movie"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/update"
                    android:src="@drawable/icon_update"/>

                <TextView
                    android:id="@+id/textview_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_margintop"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frame_edu"
                android:layout_marginTop="@dimen/game_margintop"
                android:layout_toLeftOf="@+id/frame_movie"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/game"
                    android:src="@drawable/icon_game"/>

                <TextView
                    android:id="@+id/textview_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_margintop"
                    android:text="@string/game"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/frame_game"
                android:layout_toLeftOf="@+id/frame_update"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/search"
                    android:src="@drawable/icon_search"/>

                <TextView
                    android:id="@+id/textview_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_margintop"
                    android:text="@string/search"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/frame_update"
                android:layout_alignTop="@+id/frame_search"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <ImageView
                    android:id="@+id/imageview_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/about"
                    android:src="@drawable/icon_about"/>

                <TextView
                    android:id="@+id/textview_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/hometext_margintop"
                    android:text="@string/about"
                    android:textColor="@color/white"
                    android:textSize="@dimen/home_text_size"/>
            </FrameLayout>

            <ImageView
                android:id="@+id/reflect_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/frame_tv"
                android:layout_below="@+id/frame_tv"
                android:layout_marginTop="@dimen/reflect_tv_margintop"
                android:clickable="false"
                android:contentDescription="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageView
                android:id="@+id/reflect_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/frame_game"
                android:layout_below="@+id/frame_game"
                android:layout_marginTop="@dimen/reflect_game_margintop"
                android:clickable="false"
                android:contentDescription="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageView
                android:id="@+id/reflect_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/frame_search"
                android:layout_below="@+id/frame_search"
                android:layout_marginTop="@dimen/reflect_search_margintop"
                android:clickable="false"
                android:contentDescription="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

            <ImageView
                android:id="@+id/reflect_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/frame_about"
                android:layout_below="@+id/frame_about"
                android:layout_marginTop="@dimen/reflect_about_margintop"
                android:clickable="false"
                android:contentDescription="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.gotech.tv.launcher.view.MainLayout>

        <com.gotech.tv.launcher.view.FlyBorderView
            android:id="@+id/flyBorder_view"
            android:layout_width="@dimen/border_width"
            android:layout_height="@dimen/border_height"
            android:background="@drawable/item_highlight"
            android:visibility="invisible"/>
    </FrameLayout>

</RelativeLayout>